force-app/main/default/objects/Competitor_Information__c/Competitor_Information__c.object-meta.xml
<CustomObject>
    <label>Competitor Information</label>
    <nameField>
        <displayFormat>COMP - {0000}</displayFormat>
        <label>Competitor No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>