force-app/main/default/objects/Competitor_Information__c/fields/Competitor_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Contract_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitor Contract Start Date</label>
    <type>Date</type>
</CustomField>