force-app/main/default/objects/Competitor_Information__c/fields/Freight_Competitor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Freight_Competitor_Rate__c</fullName>
    <description>Freight - To capture the rate offered by the competitor</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide competitor rate (if known / applicable)</inlineHelpText>
    <label>Competitor Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>