force-app/main/default/objects/Competitor_Information__c/recordTypes/Corporate_Sales_Competitor_Information.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Sales_Competitor_Information</fullName>
    <active>true</active>
    <description>To capture Competitor Information against an Account</description>
    <label>Corporate Sales Competitor Information</label>
</RecordType>