force-app/main/default/objects/Competitor_Information__c/recordTypes/Freight_Competitor_Information.recordType-meta.xml
<RecordType>
    <fullName>Freight_Competitor_Information</fullName>
    <active>true</active>
    <description>Freight - To capture competitor information against an Opportunity</description>
    <label>Freight Competitor Information</label>
</RecordType>