force-app/main/default/objects/Competitor_Information__c/listViews/My_Competitors.listView-meta.xml
<ListView>
    <fullName>My_Competitors</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Competitor__c</columns>
    <columns>Competitor_Contract_End_Date__c</columns>
    <columns>Competitor_Contract_Start_Date__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Competitors</label>
</ListView>